Add fully symbolic variant of `sorting` benchmark. It's not declared as a variant to avoid disturbing existing benchmarks that are currently being used for a study.

--- a/real/CMakeLists.txt
+++ b/real/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_benchmark(sorting)
+add_benchmark(sorting_full_sym)
 add_subdirectory(gmp)
 add_benchmark(numerical_recipes)
 add_benchmark(libmatheval)
